[package]
authors = ["Softbear, Inc."]
edition = "2021"
license = "LGPL-3.0-or-later"
name = "kodiak_common"
version = "0.2.0"
workspace = ".."

[features]
default = ["lz4"]
admin = []
audio_macros = ["kodiak_macros/audio"]
bitcode_arrayvec = [ "plasma_protocol/bitcode_arrayvec" ]
bitcode_glam = [ "plasma_protocol/bitcode_glam" ]
bitcode_serde = [ "plasma_protocol/bitcode_serde" ]
desync = []
glam_bytemuck = [ "glam/bytemuck" ]
glam_rand = [ "glam/rand" ]
lz4 = ["lz4_flex"]
ply_macros = ["kodiak_macros/ply"]
server = ["admin", "actix", "plasma_protocol/server", "log"]

[dependencies]
actix = { version = "0.13", optional = true }
arrayvec = "0.7"
fastapprox = "0.3.0"
fxhash = "0.2"
glam = { version = "0.22", features = ["debug-glam-assert", "rand", "scalar-math", "serde"] }
heapless = "0.8.0"
kodiak_macros = { path = "../macros" }
log = {version = "0.4.17", optional = true}
lz4_flex = { version = "=0.11.2", default-features = false, features = ["frame"], optional = true }
paste = "1.0.12"
plasma_protocol = { path = "../plasma_protocol" }
rand = { version = "0.8.5", default-features = false }
serde = "1.0"
strum = { version = "0.24", features = ["derive"] }
zstd = { version = "0.13.0", features = ["experimental"], optional = true }

[dev-dependencies]
glam = { version = "0.22", features = ["rand"] }
env_logger = "0.11.3"
rand_chacha = "0.3.1"
serde_json = "1.0"
zstd = { version = "0.13.0", features = ["experimental"] }

[build-dependencies]
gethostname = "0.4.1"
rcgen = "0.9"
rustls-pemfile = "1"
time = "0.3"
x509-certificate = "=0.23.1"
