[package]
authors = ["Softbear, Inc."]
edition = "2021"
license = "LGPL-3.0-or-later"
name = "kodiak_server"
version = "0.2.0"
workspace = ".."

[features]
log_release_max_level_info = [ "log/release_max_level_info" ]

[dependencies]
actix = "0.13.5"
async-trait = "0.1"
axum = { version = "0.8.1", default-features = false, features = ["http1", "json", "query", "tokio"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
axum-server-timing = { version = "=2.0.0" }
# 0.5.0 has http2 support but uses `Option::is_none_or`, not present in our nightly version.
axum-tws = { version = "0.4", git = "https://github.com/finnbear/axum-tws", branch = "http2", features = ["http2"] }
base64 = "0.22.1"
tokio-websockets = { version = "0.10.1", default-features = false, features = ["client", "rand", "ring", "rustls-webpki-roots", "simd"] }
bytes = "1"
clap = { version = "4.4.6", default-features = false, features = ["derive", "std"] }
db_ip = "0.3.11"
dhat = "0.3.3"
futures = "0.3"
hyper = { version = "=1.6.0" }
hyper-util = { version = "=0.1.7", features = [ "tokio" ] }
kodiak_common = { path = "../common", features = ["server"] }
log = { version = "0.4", features = [ "std" ] }
minicdn = { version = "0.2.4", default-features = false } # Version and features set via core_protocol.
pin-project = "1.1"
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    "json",
], default-features = false }
ring = "0.17.8"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pki-types = "1.8.0"
rustls-pemfile = "2.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
simple_server_status = { version = "0.2.4", features = ["cpu", "ram", "net", "conntrack"], default-features = false}
socket2 = "0.5.7"
strum = { version = "0.24", features = ["derive"] }
tokio = "1.39.3"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tower = "0.4"
tower-http = { version = "0.5.2", features = ["cors"] }
webpki = "0.22.4"
woothee = "0.13"
# dangerous-configuration is workaround for https://github.com/BiagioFesta/wtransport/commit/66965272b71a62bcc720fd47323ab3be661bd7f3
wtransport = { version = "0.3.1", default-features = false, features = ["quinn", "dangerous-configuration"] }
x509-parser = "0.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.25", features = ["user", "resource"], default-features = false }
pprof = { version = "0.13", git="https://github.com/Erigara/pprof-rs", branch = "fix_pointer_align", features = ["flamegraph"] }
